# gRPC_client_side_load_balancer

./: .gitignore  Dockerfile  README.md
server/: CMakeLists.txt
server/proto/: order.proto
server/src/: client.cpp  gateway_server.cpp  lb_client.cpp  lb_client.h  server.cpp
